<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jcaruso.fishproject.signin.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@dimen/img_size_s"
            android:layout_height="@dimen/img_size_s"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_xl"
            android:layout_marginTop="@dimen/space_l"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/firstname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/lastname" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_s"
            android:paddingTop="@dimen/space_l">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_s"
                android:text="@string/sex"
                android:textSize="@dimen/text_size_medium" />

            <RadioGroup
                android:id="@+id/signin_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/signin_sex_m"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signin_sex_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/space_xl"
                    android:text="@string/sex_m" />

                <RadioButton
                    android:id="@+id/signin_sex_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_f" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_m"
            android:paddingTop="@dimen/space_xl">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/space_3xl"
                android:paddingStart="@dimen/space_s"
                android:text="@string/department"
                android:textSize="@dimen/text_size_medium" />

            <Spinner
                android:id="@+id/signin_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signin_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_l">

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/signin_signin_progress"
                android:layout_width="@dimen/space_xl"
                android:layout_height="@dimen/space_xl"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:cpb_color="@color/coral"
                app:cpb_stroke_width="@dimen/circular_progress_bar_stroke_width" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signin_signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/coral"
                android:text="@string/signin"
                android:textColor="@color/white" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>
