<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@dimen/img_size_s"
            android:layout_height="@dimen/img_size_s"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_m"
            android:layout_marginTop="@dimen/space_l"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher"
            android:tint="@color/coral" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_department_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_department_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department_address"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_department_employee_nb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department_employee_nb"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_l">

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/add_department_add_progress"
                android:layout_width="@dimen/space_xl"
                android:layout_height="@dimen/space_xl"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:cpb_color="@color/coral"
                app:cpb_stroke_width="@dimen/circular_progress_bar_stroke_width" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/add_department_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/coral"
                android:text="@string/add"
                android:textColor="@color/white" />

        </FrameLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>