<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/error_retry"
        android:textColor="#656565"
        android:textSize="20sp" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/img_size_s"
                    android:layout_height="@dimen/img_size_s"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/space_m"
                    android:layout_marginTop="@dimen/space_l"
                    android:contentDescription="@string/fish"
                    android:src="@mipmap/ic_launcher"
                    android:tint="@color/coral" />

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/space_s"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_subtitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_s"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profile_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/space_s"
                        android:textColor="@color/medium_grey"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/profile_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/space_s"
                        android:textColor="@color/medium_grey"
                        android:textSize="@dimen/text_size_medium" />

                    <ImageView
                        android:id="@+id/profile_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/sex" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_l"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/space_l">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/space_m"
                        android:contentDescription="@string/department"
                        android:src="@drawable/ic_business_black_48dp"
                        android:tint="@color/medium_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/space_s"
                        android:text="@string/department"
                        android:textColor="@color/medium_grey"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/profile_department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/medium_grey"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>